fixed project subheading (added spacing), remove nav lines when clicked on mobile for homepage

--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -295,6 +295,11 @@ h6 {
     margin-left: 4%;
 }
 
+@media screen and (max-width: 1100px) {
+    .project-subheading {
+        width: 75%;
+    }
+}
 @media screen and (max-width: 920px) {
     .project-image {
         height: 200px;
