--- a/assets/css/homepage-style.css
+++ b/assets/css/homepage-style.css
@@ -213,8 +213,9 @@ html, body {
     height: 100%;
     z-index: 1;
     background-color: #e3e3e3;
-    position: absolute;
     top: 0%;
+
+    position: fixed;
     animation-name: right-left-opening;
     animation-duration: 0.5s;
     animation-fill-mode: forwards;
@@ -246,7 +247,7 @@ html, body {
 
 @keyframes left-right-closing {
     from { 
-        opacity: 1;
+        opacity: 0.95;
         width: 100%;
         left: 0%;
     }
@@ -266,6 +267,6 @@ html, body {
     to {
         left: 0%;
         width: 100%;
-        opacity: 1;
+        opacity: 0.95;
     }
 }
